--- a/zcopy/zcopy.csproj
+++ b/zcopy/zcopy.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Commands\DelegatingSearchFilter.cs" />
     <Compile Include="Commands\ZCopyCommand.cs" />
     <Compile Include="Commands\ZCopyCommand.Methods.Private.cs" />
+    <Compile Include="AnsiConsole\AnsiConsole.cs" />
     <Compile Include="Internal\EnvironmentVariableAttribute.cs" />
     <Compile Include="Internal\Extensions\ByteExtensions.cs" />
     <Compile Include="Internal\Extensions\FileSystemInfoExtensions.cs" />
@@ -101,6 +102,7 @@
     <Compile Include="FileOperations\MD5VerificationStartedEventArgs.cs" />
     <Compile Include="FileOperations\MoveOptions.cs" />
     <Compile Include="FileSystemSearch\ISearchFilter.cs" />
+    <Compile Include="Internal\ZCopyOutput.cs" />
     <Compile Include="Logging\ConsoleLogger.cs" />
     <Compile Include="FileOperations\CopyOptions.cs" />
     <Compile Include="Logging\CopySpeedUomTypes.cs" />
