--- a/zcopy/zcopy.csproj
+++ b/zcopy/zcopy.csproj
@@ -62,10 +62,6 @@
     <Compile Include="Commands\ZCopyCommand.cs" />
     <Compile Include="Commands\ZCopyCommand.Methods.Private.cs" />
     <Compile Include="AnsiConsole\AnsiConsole.cs" />
-    <Compile Include="FileOperations\BasicFileComparer.cs" />
-    <Compile Include="FileOperations\FileEqualityComparer.cs" />
-    <Compile Include="FileOperations\FileComparerWithAttributes.cs" />
-    <Compile Include="FileOperations\FileComparerWithTimeStamps.cs" />
     <Compile Include="FileOperations\FileOperationRetryStartedEventArgs.cs" />
     <Compile Include="Internal\EnvironmentVariableAttribute.cs" />
     <Compile Include="Internal\Extensions\ByteExtensions.cs" />
@@ -106,6 +102,7 @@
     <Compile Include="FileOperations\MD5VerificationStartedEventArgs.cs" />
     <Compile Include="FileOperations\MoveOptions.cs" />
     <Compile Include="FileSystemSearch\ISearchFilter.cs" />
+    <Compile Include="Internal\ZCopyException.cs" />
     <Compile Include="Internal\ZCopyOutput.cs" />
     <Compile Include="Logging\ConsoleLogger.cs" />
     <Compile Include="FileOperations\CopyOptions.cs" />
